@@ -1,6 +1,6 @@
 # Editor release-wide properties
 editor.release.number=2.0_200701209
-editor.contributors=Lindsay Bradford, Moe Wynn, Matt Flaherty, Mike Fowler
+editor.contributors=Lindsay Bradford, Moe Wynn, Matt Flaherty, Mike Fowler, David Truffet
 compatible.engine.release.number=Beta 8.2
 compatible.engine.jar.name=YAWLBeta8.2_Standalone.jar
 compatible.java.release.number=1.5.0_11
